remove carousel sliding cause it make no sense

--- a/views/news/2.jade
+++ b/views/news/2.jade
@@ -223,7 +223,7 @@
               .spacer-40
               .spacer-20
             .row
-              .carousel.slide(data-ride="carousel")
+              .carousel(data-ride="carousel")
                 .carousel-inner#earlier-carousel(role="listbox")
 
                   /// Page 1 & 2
