--- a/views/news/3.jade
+++ b/views/news/3.jade
@@ -40,7 +40,7 @@
         .row
           .spacer-20
           .spacer-10
-        .carousel.slide(data-ride="carousel")
+        .carousel(data-ride="carousel")
           .carousel-inner#video-carousel(style="height: 235px;", role="listbox")
         .row.carousel-pager
           ul
