spacing adjustment hack

--- a/views/news/2.jade
+++ b/views/news/2.jade
@@ -170,10 +170,10 @@
                     p.news-title MyGameDev set to help the Industry Grow
                       span.news-arrow >>
                 .row.news-left-page
-                  div.news-date 12 OCT 2013
+                  div.news-date 12 Oct 2013
 
                 .row
-                  .spacer-20
+                  .hidden-sm.spacer-20
                   .spacer-10
 
                 .row.news-left-page
@@ -181,7 +181,7 @@
                     p.news-title Bernama Biztalk’s Game On Segment
                       span.news-arrow >>
                 .row.news-left-page
-                  div.news-date 02 SEPT 2013
+                  div.news-date 02 Sept 2013
 
               // right page
               .col-sm-6
@@ -190,7 +190,7 @@
                     p.news-title Gaming To A Degree
                       span.news-arrow >>
                 .row
-                  div.news-date 24 AUG 2013
+                  div.news-date 24 Aug 2013
 
                 .row
                   .spacer-20
@@ -202,7 +202,7 @@
                     p.news-title Boosting Creative Content Industry
                       span.news-arrow >>
                 .row
-                  div.news-date 15 JAN 2013
+                  div.news-date 15 Jan 2013
 
 
           // TODO: Pager for when theres more item
@@ -235,10 +235,10 @@
                           p.news-title Electronic games development industry to grow under GTP
                             span.news-arrow >>
                       .row.news-left-page
-                        div.news-date 20 NOV 2012
+                        div.news-date 20 Nov 2012
 
                       .row
-                        .spacer-20
+                        .hidden-sm.spacer-20
                         .spacer-10
 
                       .row.news-left-page
@@ -246,20 +246,19 @@
                           p.news-title Game Development Industry Set to Grow
                             span.news-arrow >>
                       .row.news-left-page
-                        div.news-date 24 SEPT 2012
+                        div.news-date 24 Sept 2012
 
                     // right page
-                    .col-sm-6
+                    .col-sm-5
                       .row
                         a(style='text-decoration:none;', href="http://www.scmp.com/article/1046145/kdu-revs-video-game-development-mygamedev")
                           p.news-title KDU revs video game dev for MYGAMEDEV
                             span.news-arrow >>
                       .row
-                        div.news-date 21 SEPT 2012
+                        div.news-date 21 Sept 2012
 
                       .row
-                        .spacer-20
-                        .spacer-20
+                        .hidden-sm.spacer-20
                         .spacer-10
 
                       .row
@@ -267,7 +266,7 @@
                           p.news-title KDU Launches ETP Project
                             span.news-arrow >>
                       .row
-                        div.news-date 29 JUN 2012
+                        div.news-date 29 Jun 2012
 
                   /// Page 3 & 4
                   .item
@@ -278,10 +277,10 @@
                           p.news-title Game Development Cluster
                             span.news-arrow >>
                       .row.news-left-page
-                        div.news-date 28 JUN 2012
+                        div.news-date 28 Jun 2012
 
                       .row
-                        .spacer-20
+                        .hidden-sm.spacer-20
                         .spacer-10
 
                       .row.news-left-page
@@ -289,16 +288,16 @@
                           p.news-title Game On For Digital Literacy
                             span.news-arrow >>
                       .row.news-left-page
-                        div.news-date 28 JUN 2012
+                        div.news-date 28 Jun 2012
 
                     // right page
-                    .col-sm-6
+                    .col-sm-5
                       .row
                         a(style='text-decoration:none;', href="http://www.liveatpc.com/kdu-university-college-kicks-off-mygamedev2020/")
                           p.news-title MYGAMEDEV Kicks Off
                             span.news-arrow >>
                       .row
-                        div.news-date 24 APR 2012
+                        div.news-date 24 Apr 2012
 
                       .row
                         .spacer-20
