--- a/views/directory/2.jade
+++ b/views/directory/2.jade
@@ -138,7 +138,7 @@
           img(style='height: 92px;', src='/img/directory/directory_category_icon_incubator.svg')
         .row.c
           .spacer-10
-          span INCUBATION
+          span INCUBATORS
           br
           span &nbsp;
 
