--- a/public/css/directory.css
+++ b/public/css/directory.css
@@ -141,6 +141,7 @@ input[type=text]::-webkit-input-placeholder { color: #C74C59; }
 
 .listing .desc .email .col-xs-11 {
     padding-right: 0px;
+    width: 90%;
 }
 
 .listing .desc .telephone .icon,
