added links to deeper pages

--- a/views/index/three.jade
+++ b/views/index/three.jade
@@ -16,7 +16,8 @@
         .col-md-3
           .frame
             .frame-header
-            img(src='/img/index/three/directory.png')
+            a(href='/directory')
+              img(src='/img/index/three/directory.png')
             p.title(style="color: #FFF3E0;") DIRECTORY
             p.desc
               | Browse through our list of
@@ -31,7 +32,8 @@
         .col-md-3
           .frame
             .frame-header
-            img(src='/img/index/three/investor.png')
+            a(href='directory')
+              img(src='/img/index/three/investor.png')
             p.title(style="color: #F69B90") INVESTOR
             p.desc
               | Explore the local and
@@ -48,7 +50,8 @@
         .col-md-3
           .frame
             .frame-header
-            img(src='/img/index/three/faq.png')
+            a(href='/faq')
+              img(src='/img/index/three/faq.png')
             p.title(style="color: white;") FAQ
             p.desc
               | Still unsure why you’re
@@ -78,17 +81,21 @@
       .col-xs-6
         .frame.center-block
           .frame-header
-            img(src='/img/index/three/directory.png')
+            a(href='/directory')
+              img(src='/img/index/three/directory.png')
             p.title(style="color: #FFF3E0;") DIRECTORY
 
-            img(src='/img/index/three/investor.png')
+            a(href='/directory')
+              img(src='/img/index/three/investor.png')
             p.title(style="color: #F69B90") INVESTOR
       .col-xs-6(style="margin: 0 auto;")
         .frame.center-block
           .frame-header
-            img(src='/img/index/three/faq.png')
+            a(href='/faq')
+              img(src='/img/index/three/faq.png')
             p.title(style="color: white;") FAQ
-            img(src='/img/index/three/news.png')
+            a(href='/news')
+              img(src='/img/index/three/news.png')
             p.title(style="color: #FFF3E0;") NEWS
 
     .row(style="margin-right: 15px; margin-left: 15px;")
