renamed for reference

--- a/views/page_news.jade
+++ b/views/page_news.jade
@@ -1,6 +1,8 @@
 extends layout_page
 block content
-  include news/1
-  include news/2
-  include news/3
+
+  include news/mast
+  include news/articles
+  include news/videos
+
   include common/contact
