--- a/views/news/videos.jade
+++ b/views/news/videos.jade
@@ -53,7 +53,7 @@
 
   .row
     .spacer-40
-    .spacer-40
-    .spacer-40
+    .hidden-xs.hidden-sm.spacer-40
+    .hidden-xs.hidden-sm.spacer-40
 
 div(style='margin: 0 -15px; border-top: 43px solid #007579')
