--- a/views/news/videos.jade
+++ b/views/news/videos.jade
@@ -1,7 +1,7 @@
 .section(style='background-color: #56C4C4; position: relative;')
 
   .row.visible-sm.visible-xs(style='background-color: #00878C; position: absolute; top: 50px; width:100%')
-    .text-center(style='color: #EFF8E7; font-family: Oswald; font-size: 36px; font-weight: bold; padding-top: 8px; padding-bottom: 8px;') VIDEOS
+    .text-center(style='color: #EFF8E7; font-family: \'Oswald Regular\', sans-serif; font-size: 36px; font-weight: bold; padding-top: 8px; padding-bottom: 8px;') VIDEOS
 
   // The ladders
   .row.text-center(style='position: absolute; left: 0; right: 0; bottom: -43px; z-index: 0')
@@ -35,7 +35,7 @@
   .row(style='padding-left: 15px; padding-right: 30px;')
     .row(style='position: relative; z-index: 3; max-width: 930px; box-shadow: 14px 8px #007579;')
       .row(style='background-color: #EE6361; max-width: 930px;')
-        .text-center(style='color: #EFF8E7; font-family: Oswald; font-size: 27px; font-weight: bold; padding-top: 8px; padding-bottom: 8px;') PLAYLIST
+        .text-center(style='color: #EFF8E7; font-family: \'Oswald Regular\', sans-serif; font-size: 27px; font-weight: bold; padding-top: 8px; padding-bottom: 8px;') PLAYLIST
       .row(style='background-color: #FFFFFF; max-width: 930px;')
         .row
           .spacer-20
