--- a/views/news/articles.jade
+++ b/views/news/articles.jade
@@ -44,7 +44,7 @@
 
           .row
             a(style='text-decoration: none;', href='http://www.edgy.my/game-malaysia')
-              div.pull-right(style='background-color: #F1826B; color: white; padding: 5px; padding-left: 15px; padding-right: 15px; font-family: Oswald;') READ
+              div.pull-right(style='background-color: #F1826B; color: white; padding: 5px; padding-left: 15px; padding-right: 15px; font-family: \'Oswald Regular\', sans-serif;') READ
 
           //.row.text-center.hidden-xs
           //  img(style='height: 167px; margin-top: 10%', src='/img/news/article_dude.svg')
