--- a/public/css/mgd.css
+++ b/public/css/mgd.css
@@ -1,6 +1,7 @@
 @font-face {  font-family: 'Aqua Grotesque';  src: url('../fonts/aqua.ttf')           format('truetype')  }
 @font-face {  font-family: 'Oswald Bold';     src: url('../fonts/Oswald-Bold.otf')    format('opentype')  }
 @font-face {  font-family: 'Oswald Light';    src: url('../fonts/Oswald-Light.otf')   format('opentype')  }
+@font-face {  font-family: 'Oswald';          src: url('../fonts/Oswald-Regular.otf') format('opentype')  }
 @font-face {  font-family: 'Oswald Regular';  src: url('../fonts/Oswald-Regular.otf') format('opentype')  }
 @font-face {  font-family: 'Oswald Stencil';  src: url('../fonts/Oswald-Stencil.otf') format('opentype')  }
 @font-face {  font-family: 'Bebas';           src: url('../fonts/BEBAS.ttf')          format('truetype')  }
