was affecting the mobile layout

--- a/views/news/videos.jade
+++ b/views/news/videos.jade
@@ -41,7 +41,7 @@
           .spacer-20
           .spacer-10
         .carousel(data-ride="carousel")
-          .carousel-inner#video-carousel(style="height: 235px;", role="listbox")
+          .carousel-inner#video-carousel(style="min-height: 235px;", role="listbox")
         .row.carousel-pager
           ul
             li#video-prev-button.arrow-left
