--- a/public/css/mgd.css
+++ b/public/css/mgd.css
@@ -1,3 +1,4 @@
+@font-face {  font-family: 'Avenir';          src: url('../fonts/Avenir.ttc')         format('truetype')  }
 @font-face {  font-family: 'Aqua Grotesque';  src: url('../fonts/aqua.ttf')           format('truetype')  }
 @font-face {  font-family: 'Oswald Bold';     src: url('../fonts/Oswald-Bold.otf')    format('opentype')  }
 @font-face {  font-family: 'Oswald Light';    src: url('../fonts/Oswald-Light.otf')   format('opentype')  }
