yeah i left a letter out

--- a/views/common/contact.jade
+++ b/views/common/contact.jade
@@ -33,7 +33,7 @@
           img.email-icon(src="/img/index/four/email.png")
           p.subtitle Drop us an email
           // p.email info@mygamedev.asia
-          p.email mygamedev2020@gmail.co
+          p.email mygamedev2020@gmail.com
           p.copyright.center-block COPYRIGHT MYGAMEDEV2020 ALL RIGHTS RESERVED.
 
     .row(style="margin-right: 0px; margin-left: 0px; position: absolute; width: 100%;")
