--- a/views/page_news.jade
+++ b/views/page_news.jade
@@ -3,6 +3,7 @@ block content
 
   include news/mast
   include news/articles
+  include news/calendar
   include news/videos
 
   include common/contact
