--- a/views/includes/scripts.jade
+++ b/views/includes/scripts.jade
@@ -1,29 +1,26 @@
-if locals.NODE_ENV != 'development'
-  script(src='/js/ga.js')
-
-script(src='/components/lodash/lodash.min.js')
-script(src='/components/moment/min/moment.min.js')
-script(src='/components/jquery/dist/jquery.min.js')
-script(src='/components/bootstrap/dist/js/bootstrap.min.js')
-script(src='/components/console.image/console.image.min.js')
-script(src='/js/doge.js')
-script(src='/js/menu.js')
+script(src='components/lodash/lodash.min.js')
+script(src='components/moment/min/moment.min.js')
+script(src='components/jquery/dist/jquery.min.js')
+script(src='components/bootstrap/dist/js/bootstrap.min.js')
+script(src='components/console.image/console.image.min.js')
+script(src='js/doge.js')
+script(src='js/menu.js')
 
 
 case page
   when 'index'
-    script(src='/js/index.js')
+    script(src='js/index.js')
 
   when 'directory'
-    script(src='/components/isotope/dist/isotope.pkgd.min.js')
-    script(src='/js/directory.js')
+    script(src='components/isotope/dist/isotope.pkgd.min.js')
+    script(src='js/directory.js')
 
   when 'faq'
-    script(src='/js/faq.js')
+    script(src='js/faq.js')
 
   when 'about'
-    script(src='/js/about.js')
+    script(src='js/about.js')
 
   when 'news'
-    script(src='/components/fitvids/jquery.fitvids.js')
-    script(src='/js/news.js')
+    script(src='components/fitvids/jquery.fitvids.js')
+    script(src='js/news.js')
