move away from absolute path

--- a/views/index/three.jade
+++ b/views/index/three.jade
@@ -1,15 +1,15 @@
 .three
   .hidden-sm.hidden-xs
     .row(style="margin-right: 15px; margin-left: 15px;")
-      img.left-pipe(src='/img/index/three/pipes-left.png')
-      img.right-pipe(src='/img/index/three/pipes-right.png')
+      img.left-pipe(src='img/index/three/pipes-left.png')
+      img.right-pipe(src='img/index/three/pipes-right.png')
       .col-md-7
-        img.lights(src='/img/index/three/lights.png')
+        img.lights(src='img/index/three/lights.png')
       .spacer
 
     .row.visible-sm.visible-xs(style="margin-right: 15px; margin-left: 15px;")
       .col-xs-12.text-center
-        img(src='/img/index/three/lights.png')
+        img(src='img/index/three/lights.png')
 
     .row.hidden-sm.hidden-xs.text-center(style="margin-right: 0; margin-left: 0;")
       .frame-container
@@ -17,7 +17,7 @@
           .frame
             .frame-header
             a(href='/directory')
-              img(src='/img/index/three/directory.png')
+              img(src='img/index/three/directory.png')
             p.title(style="color: #FFF3E0;") DIRECTORY
             p.desc
               | Browse through our list of
@@ -33,7 +33,7 @@
           .frame
             .frame-header
             a(href='directory')
-              img(src='/img/index/three/investor.png')
+              img(src='img/index/three/investor.png')
             p.title(style="color: #F69B90") INVESTOR
             p.desc
               | Explore the local and
@@ -51,7 +51,7 @@
           .frame
             .frame-header
             a(href='/faq')
-              img(src='/img/index/three/faq.png')
+              img(src='img/index/three/faq.png')
             p.title(style="color: white;") FAQ
             p.desc
               | Still unsure why you’re
@@ -69,39 +69,39 @@
             .more ...View More
     .row(style="margin-right: 0px; margin-left: 0px;")
       .col-xs-12.lobby-container
-        img.lobby(src='/img/index/three/lobby.png')
+        img.lobby(src='img/index/three/lobby.png')
       .bottom-spacer
 
 
   .visible-xs.visible-sm
     .row(style="margin-right: 15px; margin-left: 15px;")
       .col-xs-12
-        img.lights-mobile.img-responsive(src='/img/index/three/lights.png')
+        img.lights-mobile.img-responsive(src='img/index/three/lights.png')
     .row.text-center(style="padding-left:15px; padding-right: 15px; margin: 0 auto;")
       .col-xs-6
         .frame.center-block
           .frame-header
             a(href='/directory')
-              img(src='/img/index/three/directory.png')
+              img(src='img/index/three/directory.png')
             p.title(style="color: #FFF3E0;") DIRECTORY
 
             a(href='/directory')
-              img(src='/img/index/three/investor.png')
+              img(src='img/index/three/investor.png')
             p.title(style="color: #F69B90") INVESTOR
       .col-xs-6(style="margin: 0 auto;")
         .frame.center-block
           .frame-header
             a(href='/faq')
-              img(src='/img/index/three/faq.png')
+              img(src='img/index/three/faq.png')
             p.title(style="color: white;") FAQ
             a(href='/news')
-              img(src='/img/index/three/news.png')
+              img(src='img/index/three/news.png')
             p.title(style="color: #FFF3E0;") NEWS
 
     .row(style="margin-right: 15px; margin-left: 15px;")
       br
       .col-xs-12.lobby-container.visible-sm
-        img.lobby-sm(src='/img/index/three/lobby.png')
+        img.lobby-sm(src='img/index/three/lobby.png')
       .col-xs-12.text-center.visible-xs
-        img.mobile-lobby(src="/img/index/three/mobile-lobby.png")
+        img.mobile-lobby(src="img/index/three/mobile-lobby.png")
     .mobile-bottom-spacer
