--- a/views/index/twob.jade
+++ b/views/index/twob.jade
@@ -3,7 +3,7 @@
   .row(style="margin-right: 20px; margin-left: 20px;")
     .col-xs-12
       .workspace-container
-        img.workspace.img-responsive(src='/img/index/two/table.png')
+        img.workspace.img-responsive(src='img/index/two/table.png')
 
   .row.hidden-sm.hidden-xs(style="margin-right: 20px; margin-left: 20px;")
     p.desc
@@ -24,30 +24,30 @@
   .hidden-xs.hidden-sm
     .row.features
       .col-sm-12.col-md-4
-        img(src='/img/index/two/gametech.png')
+        img(src='img/index/two/gametech.png')
         p.subtitle GAME TECHNOLOGY
         .spacer.visible-xs
       .col-sm-12.col-md-4
-        img(src='/img/index/two/gameart.png')
+        img(src='img/index/two/gameart.png')
         p.subtitle GAME ART
         .spacer.visible-xs
       .col-sm-12.col-md-4
-        img(src='/img/index/two/gamedesign.png')
+        img(src='img/index/two/gamedesign.png')
         p.subtitle GAME DESIGN
         .spacer.visible-xs
 
   .visible-sm.visible-xs
     .row(style="margin-right: 20px; margin-left: 20px;")
       .col-sm-12
-        img(src='/img/index/two/gametech.png')
+        img(src='img/index/two/gametech.png')
         p.subtitle GAME TECHNOLOGY
         .spacer
       .col-sm-12
-        img(src='/img/index/two/gameart.png')
+        img(src='img/index/two/gameart.png')
         p.subtitle GAME ART
         .spacer
       .col-sm-12
-        img(src='/img/index/two/gamedesign.png')
+        img(src='img/index/two/gamedesign.png')
         p.subtitle GAME DESIGN
         .spacer.
 
