--- a/views/common/contact.jade
+++ b/views/common/contact.jade
@@ -3,19 +3,18 @@
     .row.md-container
       .col-md-6.col-md-offset-1
         .contact-sheet
-          img.banner(src='/img/index/four/sm.png')
+          img.banner(src='img/index/four/sm.png')
           p.title
             | Want to know more or
             br
             | ask us any questions ?
-          img.email-icon(src="/img/index/four/email.png")
+          img.email-icon(src="img/index/four/email.png")
           p.subtitle Drop us an email
           // p.email info@mygamedev.asia
           p.email mygamedev2020@gmail.com
           p.copyright COPYRIGHT MYGAMEDEV2020 ALL RIGHTS RESERVED.
       .col-md-5(style='padding-left: 0px; padding-right: 0px;')
-        div(style='height: 600px;background-position:0px 95px; background-image: url(/img/index/four/office.png); background-repeat: no-repeat; image-rendering: optimizeQuality;')
-        //img.office(src='/img/index/four/office.png')
+        div(style='height: 600px;background-position:0px 95px; background-image: url(img/index/four/office.png); background-repeat: no-repeat; image-rendering: optimizeQuality;')
 
     .row.bottom-background(style="margin-right: 0px; margin-left: 0px;")
     .row.bottom-spacer(style="margin-right: 0px; margin-left: 0px;")
@@ -25,21 +24,20 @@
     .row(style="margin-right: 0px; margin-left: 0px;")
       .col-md-6.col-md-offset-1(style="margin-left: 20px;margin-right: 20px;")
         .contact-sheet.mobile-contact-sheet
-          img.mobile-banner.img-responsive(src='/img/index/four/sm.png')
+          img.mobile-banner.img-responsive(src='img/index/four/sm.png')
           p.title
             | Want to know more or
             br
             | ask us any questions ?
-          img.email-icon(src="/img/index/four/email.png")
+          img.email-icon(src="img/index/four/email.png")
           p.subtitle Drop us an email
-          // p.email info@mygamedev.asia
           p.email mygamedev2020@gmail.com
           p.copyright.center-block COPYRIGHT MYGAMEDEV2020 ALL RIGHTS RESERVED.
 
     .row(style="margin-right: 0px; margin-left: 0px; position: absolute; width: 100%;")
       br
       br
-      .col-xs-12(style='height: 500px;background-position:50px 10px; background-image: url(/img/index/four/office.png); background-repeat: no-repeat; image-rendering: optimizeQuality;')
+      .col-xs-12(style='height: 500px;background-position:50px 10px; background-image: url(img/index/four/office.png); background-repeat: no-repeat; image-rendering: optimizeQuality;')
     .row.mobile-bottom-background(style="margin-right: 0px; margin-left: 0px;")
     .row.mobile-bottom-spacer(style="margin-right: 0px; margin-left: 0px;")
 
