template variables and indent 4

--- a/views/layout_page.jade
+++ b/views/layout_page.jade
@@ -1,8 +1,9 @@
 doctype html5
 html
-  include includes/head
-  body
-    include includes/nav
-    #content.container-fluid
-      block content
-    include includes/scripts
+    block vars
+    include includes/head
+    body
+        include includes/nav
+        #content.container-fluid
+            block content
+        include includes/scripts
