indeent 4, update absolute paths, set template globals

--- a/views/page_about.jade
+++ b/views/page_about.jade
@@ -1,8 +1,10 @@
 extends layout_page
+block vars
+    - var page='about'
 block content
-  include about/1
-  include about/2
-  include about/3
-  include about/4
-  include about/5
-  include common/contact
+    include about/1
+    include about/2
+    include about/3
+    include about/4
+    include about/5
+    include common/contact
