indent 4 and global vars

--- a/views/page_index.jade
+++ b/views/page_index.jade
@@ -1,9 +1,9 @@
 extends layout_page
-
+block vars
+    - var page='index'
 block content
-
-  include index/one
-  include index/twoa
-  include index/twob
-  include index/three
-  include common/contact
+    include index/one
+    include index/twoa
+    include index/twob
+    include index/three
+    include common/contact
