indent 4 and global vars

--- a/views/page_faq.jade
+++ b/views/page_faq.jade
@@ -1,7 +1,9 @@
 extends layout_page
+block vars
+    - var page='faq'
 block content
-  include faq/1
-  include faq/2
-  include faq/3
-  include faq/4
-  include common/contact
+    include faq/1
+    include faq/2
+    include faq/3
+    include faq/4
+    include common/contact
