--- a/views/error.jade
+++ b/views/error.jade
@@ -1,6 +1,7 @@
 extends layout_page
-
+block vars
+    - var page='error'
 block content
-  h1= message
-  h2= error.status
-  pre #{error.stack}
+    h1= message
+    h2= error.status
+    pre #{error.stack}
